--- a/SkyBall/SkyBall/SkyBall.csproj
+++ b/SkyBall/SkyBall/SkyBall.csproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <Compile Include="Config\GameConfig.cs" />
     <Compile Include="Core\ComponentFactory.cs" />
+    <Compile Include="Core\TextureFactory.cs" />
     <Compile Include="Core\SoundFactory.cs" />
     <Compile Include="Core\FrameRateCounter.cs" />
     <Compile Include="Core\Primitives2d.cs" />
@@ -147,7 +148,6 @@
     <Compile Include="Drawable\Character.cs" />
     <Compile Include="Entity\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Engine.cs" />
     <Compile Include="X2DPE\Emitter.cs" />
     <Compile Include="X2DPE\Helpers\EmitterHelper.cs" />
     <Compile Include="X2DPE\Helpers\ParticleFader.cs" />
